[tool.poetry]
name = "chat-arxiv-backend"
version = "0.1.0"
description = ""
authors = ["kkin1995"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
pydantic = "^2.7.0"
llama-index = "^0.10.30"
uvicorn = "^0.29.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
